fix: alignment fix

--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,14 @@ select {
     list-style: none;
     gap: 12px;
     margin-top: 40px;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 25px;
 }
 
-
+.movie-container {
+    margin-right: 98px;
+}
 
 .showcase li {
     display: flex;
